fix text align

--- a/src/templates/sass/home.sass
+++ b/src/templates/sass/home.sass
@@ -125,6 +125,7 @@ input
 #lastfm-auth > p
   padding: 1em
   font-style: italic
+  text-align: center;
 
 .token-input
   padding: .3rem 0rem
